# maestro7it_education

./: .gitattributes  .gitignore  LICENCE_RU  README.md  modern_intro.cpp  temp_winget_content.txt  test.cpp  test.py  Китайские_образовательные_платформы.docx
c_plus_plus/solution_tasks/PCMetrics/: .gitignore  BUILD_SCRIPTS.md  CMakeLists.txt  CONTRIBUTING.md  IMPROVEMENTS_REPORT.md  README.md  README_ENHANCED.md  build_project.bat  build_project.sh  quick_test.ps1
c_plus_plus/solution_tasks/PCMetrics/build_fresh/: Makefile
c_plus_plus/solution_tasks/PCMetrics/build_new/: Makefile
c_plus_plus/solution_tasks/PCMetrics/docs/: BUILD_GUIDE.md  BUILD_GUIDE_EN.md
c_plus_plus/solution_tasks/PCMetrics/include/: color_output.h  cpu_monitor.h  disk_monitor.h  gpu_monitor.h  logger.h  memory_monitor.h  metrics_exporter.h  network_monitor.h  utils.h
c_plus_plus/solution_tasks/PCMetrics/libs/: README.md
c_plus_plus/solution_tasks/PCMetrics/src/: cpu_monitor.cpp  disk_monitor.cpp  disk_monitor.h  gpu_monitor.cpp  logger.cpp  main.cpp  memory_monitor.cpp  memory_monitor.h  metrics_exporter.cpp  network_monitor.cpp
c_plus_plus/solution_tasks/PCMetrics/tests/: comprehensive_test.cpp  logger_test.cpp  main_test.cpp  memory_monitor_test.cpp  minimal_test.cpp  simple_test.cpp  test_framework.cpp  test_framework.h
c_plus_plus/solution_tasks/chess_engine/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  IMPROVEMENTS.md  LICENCE_RU  LICENSE  README-note.md  README-note_v2.md  README.md  README_RU.md  TODO.md  USER_GUIDE.md  baseline_test.cpp  benchmark_comparison.py  benchmark_results.json  build.bat  build.sh  build_engine.sh  build_engine_windows.bat  build_gui_windows.bat  chess_engine_wrapper.py  chess_gui.py  chess_gui_with_icons.py  chess_launcher.py  cleanup_project.bat  debug_checkmate.py  demo_game.pgn  docker-compose.yml  download_flaticon.html  download_flaticon_icons.py  enhanced_chess_gui.py  fastapi_chess.py  final_demo.py  final_test_suite.py  flaticon_chess_gui.py  flaticon_implementation_report.md  full_chess_game.py  gui_implementation_report.md  icons_implementation_report.md  (+46 more)
c_plus_plus/solution_tasks/chess_engine/core/: chess_engine_wrapper.py  endgame_tablebase.py  enhanced_chess_ai.py  incremental_evaluator.py  neural_evaluator.py  optimized_move_generator.py  parallel_chess_ai.py  pawn_hash_table.py  professional_endgame_tablebase.py  stockfish_nnue.py  uci_protocol.py
c_plus_plus/solution_tasks/chess_engine/include/: advanced_ai.hpp  advanced_chess_engine.hpp  bitboard.hpp  board.hpp  check_detection.hpp  chess_gui.hpp  console_ui.hpp  encoding_utils.hpp  endgame_tablebase.hpp  enhanced_evaluator.hpp  game_rules.hpp  incremental_evaluator.hpp  integrated_engine.hpp  minimax.hpp  move_generator.hpp  move_ordering.hpp  neural_evaluator.hpp  opening_book.hpp  optimized_move_generator.hpp  parallel_search.hpp  piece.hpp  position_evaluator.hpp  transposition_table.hpp  uci_engine.hpp  utf8_support.hpp
c_plus_plus/solution_tasks/chess_engine/interfaces/: advanced_features.py  fastapi_chess.py  full_chess_game.py  pygame_chess.py
c_plus_plus/solution_tasks/chess_engine/notes/: UCI_протокол.md  bitboard_implementation_plan.md  pgn_система.md  веб_интерфейс.md  документация.md  инкрементальная_оценка.md  интеграция_stockfish.md  исправление_очередности_ходов.md  итоговый_отчет.md  итоговый_отчет_по_улучшениям.md  итоговый_отчет_проекта.md  итоговый_отчет_улучшений.md  многопоточность.md  оптимизации.md  отчет_stockfish.md  план_реализации.md  полный_обзор_оптимизаций.md  примеры_использования.md  продвинутые_оптимизации.md  расширенные_оптимизации.md  тестирование.md  тестирование_движка.md  технические_заметки.md  улучшения_оценки.md  улучшенная_оценка.md  финальный_отчет.md  финальный_отчет_оптимизации.md  финальный_отчет_проекта.md  финальный_отчет_улучшений.md
c_plus_plus/solution_tasks/chess_engine/src/: advanced_ai.py  advanced_evaluation_test.cpp  analysis_integration.py  bitboard_test.cpp  check_demo.py  check_detection.py  comprehensive_benchmark.cpp  comprehensive_optimization_test.cpp  comprehensive_test.cpp  comprehensive_tester.py  console_gui.cpp  encoding_test.cpp  endgame_demo.py  endgame_tablebase.py  engine_demo.cpp  enhanced_evaluator_test.cpp  evaluation_demo.cpp  full_system_test.cpp  game_analyzer.py  incremental_eval_test.cpp  main.cpp  main_gui.cpp  move_gen_performance_test.cpp  opening_book.cpp  opening_book_test.cpp  optimized_stockfish_pygame.py  performance_benchmark.cpp  performance_monitor.py  pgn_integration.py  pgn_saver.py  san_parser.py  stockfish_demo.py  stockfish_integration.py  test_chess.cpp  transposition_table.cpp  uci_demo.cpp  uci_engine.cpp  utf8_test.cpp  visual_chess.cpp
c_plus_plus/solution_tasks/chess_engine/tests/: README.md  comprehensive_benchmark.py  comprehensive_special_moves.cpp  enhanced_fastapi_test.py  enhanced_game_tests.cpp  run_all_tests.py  test_castling.py  test_comprehensive_neural.py  test_endgame_tablebase.py  (+3 more)
c_plus_plus/solution_tasks/engineering-calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  README.md  Tokenizer.cpp  Tokenizer.h  main.cpp
online_webinars/10.03.2026/lab_opencl/: .clang-format  .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  Doxyfile  README.md  todo.md  Лабораторная работа - использование технологий вычислений на GPU.docx
python/solution_tasks/simple_hr/: .editorconfig  .env-sample  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yml  ANIMATIONS_GUIDE.md  CHANGELOG.md  DOCKER.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  Makefile  QUICKSTART.md  README.md  VACATION_CALENDAR_FIX.md  check_db.py  check_employees.py  check_setup.py  create_simple_hr_db.sql  detailed_test.py  docker-compose.yml  form_test.html  init_db.py  populate_test_data.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_reminders.py  sample_employees.csv  sample_employees_import.csv  seed_data.py  simple_test_data.py  test_app.py  test_hiring_report.csv
(+4692 files in other folders)
